tutorial now correctly skipped on mobile. Refactor to use private accessors and methods

--- a/games/snake/style.css
+++ b/games/snake/style.css
@@ -234,7 +234,7 @@ dialog::backdrop {
   --direction: LEFT;
   background-image: url("../../assets/snake-eyes.svg");
   background-color: var(--snake-segment-color);
-  
+
   border-bottom-left-radius: 40%;
   border-top-left-radius: 40%;
   border-top-right-radius: 0;
@@ -329,6 +329,22 @@ dialog::backdrop {
 }
 
 @media (pointer: coarse) {
+  button:focus {
+    outline: none;
+  }
+
+  #easy:focus {
+    outline: 2px solid var(--light-green-color);
+  }
+
+  #medium:focus {
+    outline: 2px solid var(--light-yellow-color);
+  }
+
+  #hard:focus {
+    outline: 2px solid var(--light-red-color);
+  }
+
   #game {
     max-width: calc(100% - 80vmin);
   }
